MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/AccountOICIntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>AccountOICIntegrationStatus__c</fullName>
    <formula>TEXT( Account.OICIntegrationStatus__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account OIC Integration Status</label>
    <type>Text</type>
</CustomField>