MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/AddressFormula__c.field-meta.xml
<CustomField>
    <fullName>AddressFormula__c</fullName>
    <formula>TRIM(
  SUBSTITUTE(
    SUBSTITUTE(
      SUBSTITUTE(
        SUBSTITUTE(
          SUBSTITUTE(
            (IF(NOT(ISBLANK(MailingStreet)), MailingStreet &amp; &quot;, &quot;, &quot;&quot;) &amp;
             IF(NOT(ISBLANK(MailingCity)), MailingCity &amp; &quot;, &quot;, &quot;&quot;) &amp;
             IF(NOT(ISBLANK(MailingState)), MailingState &amp; &quot;, &quot;, &quot;&quot;) &amp;
             IF(NOT(ISBLANK(MailingPostalCode)), MailingPostalCode &amp; &quot;, &quot;, &quot;&quot;) &amp;
             IF(NOT(ISBLANK(MailingCountry)), MailingCountry, &quot;&quot;)
            ),
          &quot;, ,&quot;, &quot;,&quot;),
        &quot;, ,&quot;, &quot;,&quot;),
      &quot;, ,&quot;, &quot;,&quot;),
    &quot;, ,&quot;, &quot;,&quot;),
  CASESAFEID(Id), &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AddressFormula</label>
    <type>Text</type>
</CustomField>