MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Agent_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Agent_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Phone Number</label>
    <type>Phone</type>
</CustomField>