MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Agent_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Agent_Status_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Status Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>