MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/ApartmentBuildingVillaNumber__c.field-meta.xml
<CustomField>
    <fullName>ApartmentBuildingVillaNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Apartment/Building/Villa Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>