MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Are_you_Politically_Exposed_Person_FRM__c.field-meta.xml
<CustomField>
    <fullName>Are_you_Politically_Exposed_Person_FRM__c</fullName>
    <formula>IF(AreYouPoliticallyExposedPersonPEP__c,&apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Are you Politically Exposed Person FRM</label>
    <type>Text</type>
</CustomField>