MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/AreYouPoliticallyExposedPersonPEP__c.field-meta.xml
<CustomField>
    <fullName>AreYouPoliticallyExposedPersonPEP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you Politically Exposed Person (PEP)</label>
    <type>Checkbox</type>
</CustomField>