MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/AreYouRealBeneficiaryOfThis__c.field-meta.xml
<CustomField>
    <fullName>AreYouRealBeneficiaryOfThis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you the real beneficiary of this transaction?</description>
    <label>Are you real beneficiary of this?</label>
    <type>Checkbox</type>
</CustomField>