MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Broker_Agency_Owner_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency_Owner_Approval_Status__c</fullName>
    <label>Broker Agency Owner Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>