MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Broker_Certificate_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Broker_Certificate_Issue_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Certificate Issue Date</label>
    <type>Date</type>
</CustomField>