MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Broker_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Broker_Status_Reason__c</fullName>
    <description>This is To fill Reason for Broker Agency Status Inactive and Blocked</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is To fill Reason for Broker Agency Status Inactive and Blocked</inlineHelpText>
    <label>Broker Status Reason</label>
    <type>TextArea</type>
</CustomField>