MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Broker_Type__c.field-meta.xml
<CustomField>
    <fullName>Broker_Type__c</fullName>
    <label>Broker Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Agency Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>