MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/BrokerContactFromOracleFusion__c.field-meta.xml
<CustomField>
    <fullName>BrokerContactFromOracleFusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker Contact From Oracle Fusion</label>
    <type>Checkbox</type>
</CustomField>