MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/City_FF__c.field-meta.xml
<CustomField>
    <fullName>City_FF__c</fullName>
    <formula>MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>