MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Compliance_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Expiry_Date__c</fullName>
    <formula>Compliance_Approval_Date__c + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Expiry Date</label>
    <type>Date</type>
</CustomField>