MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/ComplianceStatus__c.field-meta.xml
<CustomField>
    <fullName>ComplianceStatus__c</fullName>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>