MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Contact_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>