MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/ContactEncryptID__c.field-meta.xml
<CustomField>
    <fullName>ContactEncryptID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactEncryptID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>