MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Country_FF__c.field-meta.xml
<CustomField>
    <fullName>Country_FF__c</fullName>
    <formula>MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>