MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Country_Modon_Egypt__c.field-meta.xml
<CustomField>
    <fullName>Country_Modon_Egypt__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ResidenceCountry</valueSetName>
    </valueSet>
</CustomField>