MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/EID_Sponsor_Arabic__c.field-meta.xml
<CustomField>
    <fullName>EID_Sponsor_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EID Sponsor (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>