MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/EIDNumber__c.field-meta.xml
<CustomField>
    <fullName>EIDNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>