MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/EligibleForLaunch__c.field-meta.xml
<CustomField>
    <fullName>EligibleForLaunch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EligibleForLaunch</label>
    <type>Checkbox</type>
</CustomField>