MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Email_Valid_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Valid_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Valid Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>