MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Emirates_ID_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_Issue_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates ID Issue Date</label>
    <type>Date</type>
</CustomField>