MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/EmiratesIDExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>EmiratesIDExpiryDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates ID Expiry Date</label>
    <type>Date</type>
</CustomField>