MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/EmployerBusinessName__c.field-meta.xml
<CustomField>
    <fullName>EmployerBusinessName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer / Business Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>