MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/En_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>En_Agent_Email__c</fullName>
    <label>Agent Email</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>