MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Experience</label>
    <referenceTo>genesysps__Experience__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>