MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Formula_PEP__c.field-meta.xml
<CustomField>
    <fullName>Formula_PEP__c</fullName>
    <formula>IF( AreYouPoliticallyExposedPersonPEP__c ,&apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula PEP</label>
    <type>Text</type>
</CustomField>