MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/IdentityProof__c.field-meta.xml
<CustomField>
    <fullName>IdentityProof__c</fullName>
    <label>Identity Proof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emirates ID</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>