MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Is_KYC_Link_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_KYC_Link_Active__c</fullName>
    <formula>AND(
(KYC_Send_Date_Time__c + (KYC_Expiry_Time_in_Seconds__c / 86400)) &gt;= NOW(),
KYC_Link_Status__c != &apos;ABANDONED&apos;,
KYC_Link_Status__c != &apos;TERMINATED&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is KYC Link Active</label>
    <type>Checkbox</type>
</CustomField>