MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Is_Passfort_Approved_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Passfort_Approved_Valid__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Passfort_Approval_Date__c)), (TODAY() - Passfort_Approval_Date__c) &lt;= 90), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Passfort Approved Valid</label>
    <type>Checkbox</type>
</CustomField>