MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/KYC_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYC Completed Date</label>
    <type>Date</type>
</CustomField>