MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/KYC_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Status__c</fullName>
    <formula>IF(
    ISBLANK(KYC_Completed_Date__c),
    &quot;KYC not complete&quot;,
    IF(
        ADDMONTHS(KYC_Completed_Date__c, 3) &lt; TODAY(),
        &quot;KYC Expired&quot;,
        &quot;KYC Active&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC Status</label>
    <type>Text</type>
</CustomField>