MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/KYCMasterPlanName__c.field-meta.xml
<CustomField>
    <fullName>KYCMasterPlanName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYCMasterPlanName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>