MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/KYCProjectName__c.field-meta.xml
<CustomField>
    <fullName>KYCProjectName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYCProjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>