MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/KYCSiteLink__c.field-meta.xml
<CustomField>
    <fullName>KYCSiteLink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYCSiteLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>