MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/KYCUnitName__c.field-meta.xml
<CustomField>
    <fullName>KYCUnitName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYCUnitName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>