MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/MailingCityArabic__c.field-meta.xml
<CustomField>
    <fullName>MailingCityArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing City Arabic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>