MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/MailingStateArabic__c.field-meta.xml
<CustomField>
    <fullName>MailingStateArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing State Arabic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>