MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/MailingStreetArabic__c.field-meta.xml
<CustomField>
    <fullName>MailingStreetArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Street Arabic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>