MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Manual_KYC_Approval__c.field-meta.xml
<CustomField>
    <fullName>Manual_KYC_Approval__c</fullName>
    <label>Manual KYC Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>