MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Masked_Email__c.field-meta.xml
<CustomField>
    <fullName>Masked_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>