MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Masked_Phone__c.field-meta.xml
<CustomField>
    <fullName>Masked_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>