MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/NationalityArabic__c.field-meta.xml
<CustomField>
    <fullName>NationalityArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NationalityArabic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>