MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/OtherSourceOfIncome__c.field-meta.xml
<CustomField>
    <fullName>OtherSourceOfIncome__c</fullName>
    <description>If Source of income is select &quot;Other&quot; then this field will be required.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Source of Income</label>
    <length>250</length>
    <type>Text</type>
</CustomField>