MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/OwnershipPercentage__c.field-meta.xml
<CustomField>
    <fullName>OwnershipPercentage__c</fullName>
    <label>Ownership Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>