MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/PassfortApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>PassfortApprovalStatus__c</fullName>
    <label>Passfort Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>In review</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Requires Resubmission</fullName>
            </value>
            <value>
                <fullName>Submitted to Operation team</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>