MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/PassfortComment__c.field-meta.xml
<CustomField>
    <fullName>PassfortComment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passfort Comment</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>