MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Passport_Issuance_Place_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issuance_Place_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Issuance Place Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>