MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Passport_Issued_Place__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issued_Place__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Issued Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>