MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/PassportIssuancePlace__c.field-meta.xml
<CustomField>
    <fullName>PassportIssuancePlace__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Issuance Place</label>
    <length>50</length>
    <type>Text</type>
</CustomField>