MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/PassportIssueDate__c.field-meta.xml
<CustomField>
    <fullName>PassportIssueDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Issue Date</label>
    <type>Date</type>
</CustomField>