MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/PassportNumber__c.field-meta.xml
<CustomField>
    <fullName>PassportNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>