MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Payment method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cross Border Transfer</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>Third Party Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>