MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>for contact center</description>
    <formula>LEFT(MobilePhone, 2) &amp;&quot;*********&quot; &amp; RIGHT(MobilePhone, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>