MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Phone_Country_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Phone_Country_Prefix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Country Prefix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>