MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Phone_FF__c.field-meta.xml
<CustomField>
    <fullName>Phone_FF__c</fullName>
    <description>This field captures the value from the standard Phone field. As the standard Phone field is not accessible in DocuSign, we created this formula field to make the data available.</description>
    <formula>Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>