MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Phone_National_Format__c.field-meta.xml
<CustomField>
    <fullName>Phone_National_Format__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone National Format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>