MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Phone_Verified_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Verified_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Verified Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>