MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/PortalUserAutoCreationFailed__c.field-meta.xml
<CustomField>
    <fullName>PortalUserAutoCreationFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal User Auto Creation Failed</label>
    <type>Checkbox</type>
</CustomField>