MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/PortalUserAutoCreationFailedReason__c.field-meta.xml
<CustomField>
    <fullName>PortalUserAutoCreationFailedReason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Portal User Auto Creation Failed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>