MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Primary_Agency_Admin__c.field-meta.xml
<CustomField>
    <fullName>Primary_Agency_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Agency Admin</label>
    <type>Checkbox</type>
</CustomField>