MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Owner</label>
    <type>Checkbox</type>
</CustomField>