MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Profession_As_Per_EID_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Profession_As_Per_EID_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profession As Per EID (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>