MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/ProfileUpdateTime__c.field-meta.xml
<CustomField>
    <fullName>ProfileUpdateTime__c</fullName>
    <description>When profile ID is updated on Contact record, this field will store the timestamp of profile id update.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile update time</label>
    <type>DateTime</type>
</CustomField>